Terceiro Dia fazendo Galeria

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
 
         <provider
-            android:authorities="trindade.daniel.galeria.fileprovider"
+            android:authorities="omena.guilherme.galeria.fileprovider"
             android:name="androidx.core.content.FileProvider"
             android:exported="false"
             android:grantUriPermissions="true">
