--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="omena.guilherme.galeria"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-feature android:name="android.hardware.camera" android:required="true"/>
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true"/>
     <uses-permission android:name="android.permission.CAMERA"/>
-
 
     <application
         android:allowBackup="true"
@@ -29,8 +30,7 @@
         </provider>
         <activity
             android:name=".PhotoActivity"
-            android:parentActivityName=".MainActivity"
-            android:exported="false" />
+            android:parentActivityName=".MainActivity"/>
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value = ".MainActivity"/>
@@ -45,5 +45,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
